# treehacks-26

./: README.md  README_FRONTEND.md  package-lock.json  package.json  vite.config.ts
backend/: requirements.txt
backend/guitarmidi/: consumer.py
backend/guitarmidi/guitarmidi/: detector.py
backend/jass/: chord_suggestion.py  chroma_index.py  tis_index.npz  tis_index.py  tis_metrics.py
backend/jass/tonal_tension/: __init__.py  dissonance.py  features.py  hierarchy.py  model.py  theory.py  voice_leading.py  weights.py
backend/pianomidi/: pyproject.toml  ws_server.py
backend/pianomidi/pianomidi/: detector.py
hooks/: useWsChord.js
pages/: index.js
src/: App.css  App.tsx  index.css
src/components/ChordEdge/: ChordEdge.tsx
src/components/ChordGraph/: ChordGraph.tsx
src/components/ChordNode/: ChordNode.tsx  OrbitingDots.tsx
src/components/DebugPanel/: DebugPanel.tsx
src/components/GlowDefs/: GlowDefs.tsx
src/components/HistoryGraph/: HistoryGraph.tsx
src/hooks/: useChordProgression.ts
src/services/: chordService.ts  clientMidiService.ts  mockChordService.ts  wsChordService.ts
src/types/: 3d-force-graph.d.ts  chord.ts  force-graph.d.ts
src/utils/: chordNotes.ts  historyGraph.ts
styles/: globals.css
