[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pianomidi"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "python-rtmidi",
    "pychord",
]

[project.scripts]
pianomidi = "pianomidi.detector:main"

[tool.hatch.build.targets.wheel]
packages = ["pianomidi"]
